Mon Oct 20 14:49:03 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/framework.make (internal-framework-distclean): Delete
	from GNUSTEP_BUILD_DIR.

Mon Oct 20 14:44:57 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	Write the list of classes belonging to a framework into the
	framework's Info-gnustep.plist too.
	* Instance/framework.make (DUMMY_FRAMEWORK_CLASS_LIST): New
	variable.
	($(DUMMY_FRAMEWORK_FILE)): Build a classarray list of classes in
	the framework, and store it in $DUMMY_FRAMEWORK_CLASS_LIST.
	(Info-gnustep.plist): Add a Classes key/value.  Depend on
	DUMMY_FRAMEWORK_FILE.
	
2003-10-19  Adam Fedor  <fedor@gnu.org>

	* Documentation/gnustep-howto.texi: Updates, clearer instructions.
	* Documenation/machines.texi, Documentation/userfaq.texi: Idem.

Sun Oct 19 16:09:46 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* native-library.make: New file.
	* GNUmakefile.in: Install native-library.make.
	* Instance/rules.make (ADDITIONAL_NATIVE_LIBS): Set from
	xxx_NATIVE_LIBS.	
	* rules.make: Implemented ADDITIONAL_NATIVE_LIBS.

Sun Oct 19 15:43:50 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/library.make (LIBRARY_NAME_WITH_LIB): New variable.
	Use it in place of GNUSTEP_INSTANCE whenever lib{library-name} is
	expected.  With this change, LIBRARY_NAME can now include or not
	the 'lib' prefix, and everything should work in both cases.
	
Wed Oct 15 17:02:30 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Master/tool.make (internal-distclean): Fixed typo causing it not
	to work.
	* Master/test-tool.make (internal-distclean): Same change.

Wed Oct 15 10:55:58 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* configure: Regenerated using autoconf 2.57 instead of 2.53.

2003-10-14  Adam Fedor  <fedor@gnu.org>

	* common.make: Simplify common GNUstep dirs.

Tue Oct 14 01:07:22 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	Implemented support for building in a build directory outside the
	source tree.  Not supported for Java and doc yet.