@@ -20,4 +20,4 @@
 #   If not, write to the Free Software Foundation,
 #   59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
-echo `echo $1 | sed 's/^\([^-]*\)-\([^-]*\)-\(.*\)$/\1/'`
+echo $1 | sed 's/^\([^-]*\)-\([^-]*\)-\(.*\)$/\1/'
