@@ -1,3 +1,9 @@
+Mon Oct 20 15:02:22 2003  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* cpu.sh: Simplified code by removing unused echo command.
+	* os.sh: Same change.
+	* vendor.sh: Same change.
+
 Mon Oct 20 14:49:03 2003  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Instance/framework.make (internal-framework-distclean): Delete
